<resources>
    <string name="app_name">TMDb API</string>
    <string name="top_rated_label">Top Rated</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="up_coming_label">Upcoming</string>
    <string name="release_date">Tanggal Rilis</string>
    <string name="genre_label">Genre</string>
    <string name="rating_label">Rating</string>
    <string name="overview_label">Overview</string>
    <string name="director_label">Direktur</string>
    <string name="writer">Writer</string>
    <string name="actor_label">Actor</string>
    <string name="title_label">Judul</string>
</resources>